# yasp-labs

./: README.md
yasp-lab-1/: lib.inc  makefile  test.asm  test.py
yasp-lab-3/: CMakeLists.txt  Makefile
yasp-lab-3/src/: prime.c  prime.h  scalar_product.c  scalar_product.h
yasp-lab-3/src/etc/: math.h  utils.h
yasp-lab-3/src/prime/: Makefile  main.c  prime_checker.h  prime_ferma.c  prime_sqrt.c
yasp-lab-3/src/product/: Makefile  cross_product.c  cross_product.h  main.c
yasp-lab-4/: CMakeLists.txt  Makefile  high_order.c  high_order.h  llist.c  llist.h  main.c
yasp-lab-5/: CMakeLists.txt
yasp-lab-5/data/: edge.h  image.h  line.h  verticle.h
yasp-lab-5/executables/: main.c  main.h  verticles.h
yasp-lab-5/filters/: acid.c  acid.h  gaussian_blur.c  gaussian_blur.h  image_rotator.h
yasp-lab-5/io/: bmp_io.c
yasp-lab-5/src/data/: image.h  line.h  verticle.h
yasp-lab-5/src/executables/: main.c  main.h  verticles.c  verticles.h
yasp-lab-5/src/filters/: acid.c  acid.h  gaussian_blur.c  gaussian_blur.h  image_rotator.c
yasp-lab-5/src/io/: bmp_io.c  bmp_io.h
yasp-lab-5/src/util/: bmp_io_statuses.h  draw_utils.c  draw_utils.h
yasp-lab-5/util/: draw_utils.c
yasp-lab-6/: CMakeLists.txt  Makefile  alloc.c  alloc.h  alloc_debug.c  alloc_debug.h  main.c  main.h
